--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,8 @@
 {
   "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
+    "rules": "firestore.rules"
   },
   "functions": {
-    "predeploy": [
-      "npm --prefix \"%RESOURCE_DIR%\" run lint"
-    ]
   },
   "hosting": {
     "public": "build",
