--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "jest": {
+    "collectCoverageFrom": [
+      "src/components/*"
+    ]
+  },
   "devDependencies": {
     "@firebase/app-types": "0.x",
     "@firebase/util": "0.x",
