--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.8.5",
     "react-firebase-hooks": "^1.1.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "firebase-admin": "~6.0.0",
+    "firebase-functions": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
